--- a/specialsOTW.html
+++ b/specialsOTW.html
@@ -10,10 +10,10 @@
 <body>
     <h1>STARBULLS
         <div class="topnav">
-            <a class="active" href="mainPage.php">Home</a>
+            <a class="active" href="mainPage.html">Home</a>
             <a href="specialsOTW.html">Specials Of The Week</a>
             <a href="">About Us</a>
-            <a href="">Apply Now</a>
+            <a href="starbull.php">Apply Now</a>
         </div>
     </h1>
     <article></article>
