added the company info and heritage

--- a/us.html
+++ b/us.html
@@ -4,10 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/starbullsCSS.css" />
+    <link rel="stylesheet" href="css/starbull.css" />
+    <title>About Us</title>
 </head>
 
 <body>
+    <h1>STARBULLS
+        <div class="topnav">
+            <a class="active" href="mainPage.html">Home</a>
+            <a href="specialsOTW.html">Specials Of The Week</a>
+            <a href="">About Us</a>
+            <a href="starbull.php">Apply Now</a>
+        </div>
+    </h1>
+    <div id="columns2">
+        <div class="column-wrap2">
+            <div class="column-left2">
+                <div class="company">
+                    <h2>Company Information</h2>
+                    <p>We are the StarBulls. The mighty, mighty StarBulls. Everywhere we go, people want to know: WHO WE
+                        ARE! So we tell
+                        them: WE ARE THE STARBULLS; THE MIGHTY, MIGHTY STARBULLS!</p>
+                </div>
+                <div class="imagewing">
+                    <img src=css/wingsncoffee.jpg alt="wingsncoffee" style="width:auto;" />
+                </div>
+                <div class="heritage">
+                    <h3>Our Heritage</h3>
+                    <p>We are humbled by the success of our company thus far. The name Starbulls was created by one of
+                        the founders: Will. He came up with this insane concept of a restaurant that serves wings and
+                        coffee! </p> </br>
+                    <p>How do we measure success? Simply: we started from the bottom, now we are here! Seriously, look
+                        at our site! A beauty to say the least.</p>
+                    <p>Just a week ago, StarBulls did not exist. It has taken hours of dedication to get this company up
+                        on the server. Hours of frustration, trying to figure out why the code looks different on our
+                        screens. Hours of trial and error as we figured out where we went wrong. One thing the founders
+                        of StarBulls has known from the beginning is: Quitters Never Win. And Winners Never Quit. At
+                        StarBulls we are
+                        Winners. </p>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
 
 </body>
 
