added the file links in the nav bar

--- a/specialsOTW.html
+++ b/specialsOTW.html
@@ -12,7 +12,7 @@
         <div class="topnav">
             <a class="active" href="mainPage.html">Home</a>
             <a href="specialsOTW.html">Specials Of The Week</a>
-            <a href="">About Us</a>
+            <a href="us.html">About Us</a>
             <a href="starbull.php">Apply Now</a>
         </div>
     </h1>
