--- a/us.html
+++ b/us.html
@@ -10,44 +10,86 @@
 </head>
 
 <body>
-    <h1>STARBULLS
-        <div class="topnav">
-            <a class="active" href="mainPage.html">Home</a>
-            <a href="specialsOTW.html">Specials Of The Week</a>
-            <a href="">About Us</a>
-            <a href="starbull.php">Apply Now</a>
-        </div>
-    </h1>
-    <div id="columns2">
-        <div class="column-wrap2">
-            <div class="column-left2">
-                <div class="company">
-                    <h2>Company Information</h2>
-                    <p>We are the StarBulls. The mighty, mighty StarBulls. Everywhere we go, people want to know: WHO WE
-                        ARE! So we tell
-                        them: WE ARE THE STARBULLS; THE MIGHTY, MIGHTY STARBULLS!</p>
-                </div>
-                <div class="imagewing">
-                    <img src=css/wingsncoffee.jpg alt="wingsncoffee" style="width:auto;" />
-                </div>
-                <div class="heritage">
-                    <h3>Our Heritage</h3>
-                    <p>We are humbled by the success of our company thus far. The name Starbulls was created by one of
-                        the founders: Will. He came up with this insane concept of a restaurant that serves wings and
-                        coffee! </p> </br>
-                    <p>How do we measure success? Simply: we started from the bottom, now we are here! Seriously, look
-                        at our site! A beauty to say the least.</p>
-                    <p>Just a week ago, StarBulls did not exist. It has taken hours of dedication to get this company up
-                        on the server. Hours of frustration, trying to figure out why the code looks different on our
-                        screens. Hours of trial and error as we figured out where we went wrong. One thing the founders
-                        of StarBulls has known from the beginning is: Quitters Never Win. And Winners Never Quit. At
-                        StarBulls we are
-                        Winners. </p>
+    <div id="socialMedia">
+        <a href="http://www.instagram.com/" class="btn btn-default" target="_blank">
+            <img src="images\instagram.png" alt="Instagram"></a>
+        <a href="http://www.facebook.com/" class="btn btn-default" target="_blank">
+            <img src="images\fb.png" alt="facebook"></a>
+        <a href="http://www.twitter.com/" class="btn btn-default" target="_blank">
+            <img src="images\_twitter.png" alt="twitter"></a>
+    </div>
+    <div class="container">
+        <h1>STARBULLS
+            <div class="topnav">
+                <a class="active" href="mainPage.html">Home</a>
+                <a href="specialsOTW.html">Specials Of The Week</a>
+                <a href="">About Us</a>
+                <a href="starbull.php">Apply Now</a>
+            </div>
+        </h1>
+        <div id="columns2">
+            <div class="column-wrap">
+                <div class="column-left2">
+                    <div class="company">
+                        <h2>Company Information</h2>
+                        <p>We are the StarBulls. The mighty, mighty StarBulls. Everywhere we go, people want to know:
+                            WHO WE
+                            ARE! So we tell
+                            them: WE ARE THE STARBULLS; THE MIGHTY, MIGHTY STARBULLS!</p>
+                    </div>
+                    <div class="imagewing">
+                        <img src="images/wingsncoffee.jpg" alt="wingsncoffee" width="100%" />
+                    </div>
+
+                    <div class="heritage">
+                        <h3>Our Heritage</h3>
+                        <p>We are humbled by the success of our company thus far. The name Starbulls was created by one
+                            of
+                            the founders: Will. He came up with this insane concept of a restaurant that serves wings
+                            and
+                            coffee! </p> </br>
+                        <p>How do we measure success? Simply: we started from the bottom, now we are here! Seriously,
+                            look
+                            at our site! A beauty to say the least.</p>
+                        <p>Just a week ago, StarBulls did not exist. It has taken hours of dedication to get this
+                            company up
+                            on the server. Hours of frustration, trying to figure out why the code looks different on
+                            our
+                            screens. Hours of trial and error as we figured out where we went wrong. One thing the
+                            founders
+                            of StarBulls has known from the beginning is: Quitters Never Win. And Winners Never Quit. At
+                            StarBulls we are
+                            Winners. </p>
+
+                    </div>
 
                 </div>
+                <div class="column-right2">
+                    <div class="tools">
+                        <h2>Tools We Used</h2>
+                        <p>Like any other company, the founders of StarBulls relied on resources and tool that helped
+                            them
+                            get the site up and running!We would like to share these very resources/tools with the
+                            world.
+                        </p>
+                        <h3>They are:</h3>
+                        <ol>
+                            <li>Bill C.: You may have heard of him. The Man. The Myth. The Legend. If you haven't, then
+                                maybe StarBulls is not for you!</li>
+                            <li>Google.com: This one can have you running in circles BUT a lot of questions have been
+                                answered by our friend Google.</li>
+                            <li>Last but not least, the founders at StarBulls, relied on one another and other
+                                classmates.
+                            </li>
+                        </ol>
+                    </div>
+                </div>
             </div>
+
         </div>
+
     </div>
+
 
 
 </body>
