added a new nav/ along with the logo

--- a/mainPage.html
+++ b/mainPage.html
@@ -7,15 +7,18 @@
 </head>
 
 <body>
+    <div class="header">
+        <img src="images/starbullslogo.png" alt="logo" />
     <h1>STARBULLS
         <div class="topnav">
             <a class="active" href="#home">Home</a>
+            <a href="">Menu</a>
             <a href="specialsOTW.html">Specials Of The Week</a>
             <a href="us.html">About Us</a>
             <a href="starbull.php">Apply Now</a>
         </div>
     </h1>
-
+</div>
 
     <p>This is a group project.</p>
     <div id="hours">
@@ -50,16 +53,10 @@
                 <td>9AM-9PM</td>
             </tr>
         </table>
-
-        <div id="image">
-            <div id="rows"></div>
-            <div class="columns">
-                <img src="images\baked-chicken-wings-4.jpg" alt="wings" style="width: 300px;"></div>
-        </div>
-        <div class="columns">
-            <img src="images\loaded-coffee-breakfast-smoothie-3-680-650x650.jpg" alt="coffee" style="width: 300px;">
-        </div>
     </div>
+        <div id="image">
+            
+    
     </div>
 
     <div id="socialMedia">
@@ -70,6 +67,9 @@
         <a href="http://www.twitter.com/" class="btn btn-default" target="_blank">
             <img src="images\_twitter.png" alt="twitter"></a>
     </div>
+
+
+    <footer>
     <div id="end">
         <b>
             Starbulls Wings and Coffee&nbsp; |&nbsp; 01010110
@@ -77,9 +77,8 @@
             01100010 01110101 01100011 01101011 01110011
             00001010 Web Development Street&nbsp; |&nbsp; Buffalo , NY 14220&nbsp; |&nbsp;
         </b>
-
     </div>
-
+</footer>
 
 </body>
 
