--- a/us.html
+++ b/us.html
@@ -19,14 +19,18 @@
             <img src="images\_twitter.png" alt="twitter"></a>
     </div>
     <div class="container">
+        <div class="header">
+            <img src="images/starbullslogo.png" alt="logo" />
         <h1>STARBULLS
             <div class="topnav">
-                <a class="active" href="mainPage.html">Home</a>
+                <a class="active" href="#home">Home</a>
+                <a href="">Menu</a>
                 <a href="specialsOTW.html">Specials Of The Week</a>
-                <a href="">About Us</a>
+                <a href="us.html">About Us</a>
                 <a href="starbull.php">Apply Now</a>
             </div>
         </h1>
+    </div>
         <div id="columns2">
             <div class="column-wrap">
                 <div class="column-left2">
@@ -91,6 +95,15 @@
     </div>
 
 
+    <div id="end">
+        <b>
+            Starbulls Wings and Coffee&nbsp; |&nbsp; 01010110
+            01100101 01101110 01101101 01101111 00100000 00110101 00100000
+            01100010 01110101 01100011 01101011 01110011
+            00001010 Web Development Street&nbsp; |&nbsp; Buffalo , NY 14220&nbsp; |&nbsp;
+        </b>
+    </div>
+</footer>
 
 </body>
 
