--- a/specialsOTW.html
+++ b/specialsOTW.html
@@ -8,13 +8,18 @@
 </head>
 
 <body>
+    <div class="header">
+        <img src="images/starbullslogo.png" alt="logo" />
     <h1>STARBULLS
         <div class="topnav">
-            <a class="active" href="mainPage.html">Home</a>
+            <a class="active" href="#home">Home</a>
+            <a href="">Menu</a>
             <a href="specialsOTW.html">Specials Of The Week</a>
             <a href="us.html">About Us</a>
             <a href="starbull.php">Apply Now</a>
         </div>
+    </h1>
+</div>
     </h1>
     <article></article>
     <div id="Specials">
