--- a/mainPage.html
+++ b/mainPage.html
@@ -7,14 +7,20 @@
 </head>
 
 <body>
-    <h1>STARBULLS
-        <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="specialsOTW.html">Specials Of The Week</a>
-            <a href="us.html">About Us</a>
-            <a href="starbull.php">Apply Now</a>
-        </div>
-    </h1>
+    <div class="header">
+        <img src="images/starbullslogo.png" alt="logo" />
+        <h1>STARBULLS
+            <div class="topnav">
+                <a class="active" href="#home">Home</a>
+                <a href="">Menu</a>
+                <a href="specialsOTW.html">Specials Of The Week</a>
+                <a href="us.html">About Us</a>
+                <a href="starbull.php">Apply Now</a>
+            </div>
+        </h1>
+    </div>
+    <div name="ingredients" class="ingredients" id="ingredients">
+    </div>
 
 
     <p>This is a group project.</p>
