--- a/specialsOTW.html
+++ b/specialsOTW.html
@@ -2,29 +2,35 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Starbulls</title>
-    <link rel="stylesheet" type="text/css" href="css\specials.css">
+    <link rel="stylesheet" type="text/css" href="css\specials.css" />
 </head>
 
 <body>
-    <a href="specialsOTW.html">
+    <!-- <a href="specialsOTW.html">
         <div class="header">
             <div class="logo">
                 <a href="mainPage.html">
                     <img src="images/starbullslogo.png" alt="logo" /></a>
-            </div>
-            <h1>STARBULLS
-                <div class="topnav">
-                    <a href="menu.html">Menu</a>
-                    <a href="specialsOTW.html">Specials Of The Week</a>
-                    <a href="us.html">About Us</a>
-                    <a href="starbull.php">Apply Now</a>
-                </div>
-            </h1>
+            </div> -->
+    <div class="header">
+        <div class="logo">
+            <a href="mainPage.html" class="logo">
+                <img src="images/starbullslogo.png" alt="logo" />
+            </a>
         </div>
+        <h1>STARBULLS
+            <div class="topnav">
+                <a href="menu.html">Menu</a>
+                <a href="specialsOTW.html">Specials Of The Week</a>
+                <a href="us.html">About Us</a>
+                <a href="starbull.php">Apply Now</a>
+            </div>
         </h1>
-        <article></article>
+    </div>
+    </h1>
+    <article>
         <div id="Specials">
             <h2>Specials Of The Week</h2>
             <dt>Milk Chocolate Mondays</dt>
@@ -93,27 +99,27 @@
             <dt>*CLOSED*</dt>
             <dd>Sorry for the inconvenience.</dd>
             <hr>
-            </article>
-        </div>
+    </article>
+    </div>
 
-        <div class="bar" style="width:100%;overflow:hidden;height:44px">
-        </div>
+    <div class="bar" style="width:100%;overflow:hidden;height:44px">
+    </div>
 
-        <div id="socialMedia">
-            <a href="http://www.instagram.com/" class="btn btn-default" target="_blank">
-                <img src="images\instagram.png" alt="Instagram"></a>
-            <a href="http://www.facebook.com/" class="btn btn-default" target="_blank">
-                <img src="images\fb.png" alt="facebook"></a>
-            <a href="http://www.twitter.com/" class="btn btn-default" target="_blank">
-                <img src="images\_twitter.png" alt="twitter"></a>
-        </div>
-        <div id="end">
-            <b>
-                Starbulls Wings and Coffee&nbsp; |&nbsp; 01101000 01101001 00100000 01100010 01101001 01101100 01101100
-                Web Development Street&nbsp; |&nbsp; Buffalo , NY 14220&nbsp; |&nbsp;
-            </b>
+    <div id="socialMedia">
+        <a href="http://www.instagram.com/" class="btn btn-default" target="_blank">
+            <img src="images\instagram.png" alt="Instagram"></a>
+        <a href="http://www.facebook.com/" class="btn btn-default" target="_blank">
+            <img src="images\fb.png" alt="facebook"></a>
+        <a href="http://www.twitter.com/" class="btn btn-default" target="_blank">
+            <img src="images\_twitter.png" alt="twitter"></a>
+    </div>
+    <div id="end">
+        <b>
+            Starbulls Wings and Coffee&nbsp; |&nbsp; 01101000 01101001 00100000 01100010 01101001 01101100 01101100
+            Web Development Street&nbsp; |&nbsp; Buffalo , NY 14220&nbsp; |&nbsp;
+        </b>
 
-        </div>
+    </div>
 
 
 </body>
