removed an a tag

--- a/specialsOTW.html
+++ b/specialsOTW.html
@@ -2,23 +2,16 @@
 <html>
 
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starbulls</title>
-    <link rel="stylesheet" type="text/css" href="css\specials.css" />
+    <link rel="stylesheet" type="text/css" href="css\specials.css">
 </head>
 
 <body>
-    <!-- <a href="specialsOTW.html">
-        <div class="header">
-            <div class="logo">
-                <a href="mainPage.html">
-                    <img src="images/starbullslogo.png" alt="logo" /></a>
-            </div> -->
     <div class="header">
         <div class="logo">
-            <a href="mainPage.html" class="logo">
-                <img src="images/starbullslogo.png" alt="logo" />
-            </a>
+            <a href="mainPage.html">
+                <img src="images/starbullslogo.png" alt="logo" /></a>
         </div>
         <h1>STARBULLS
             <div class="topnav">
@@ -51,9 +44,10 @@
             <hr>
             <dt>Wings n Wednesdays</dt>
             <dd>Tis' the middle of an hardworking week, come to StarBulls and let us get you a great discount
-                on wings. For $100 get yourself an all you can wing buffet for 5 people!!</br> We're talking about any
-                flavor
-                you can ask for; buffalo, BBQ, honey mustard, garlic, original, blueberry, watermelon, and many more.
+                on wings. For $100 get yourself an all you can wing buffet for 5 people!!</br> We're talking about
+                any flavor
+                you can ask for; buffalo, BBQ, honey mustard, garlic, original, blueberry, watermelon, and many
+                more.
                 There's no other restaurant that does it the same way we do.</br> Now come and enjoy an authentic
                 experience here
                 in Buffalo. We will not dissapoint. ($100/per table of 4)</dd>
@@ -72,24 +66,25 @@
             <dt>Flying Fridays</dt>
             <dd>If you come to StarBulls on a Friday, prepare to be taken on a ride. We completely transform the
                 restaurant
-                to make it simulate you're in the clouds. With a little imagination, you will be flying to your dream
-                location.
+                to make it simulate you're in the clouds. With a little imagination, you will be flying to your
+                dream location.
                 Since the environment incorporates a flying simulation, we figured the food should give you the same
                 kind of
-                experience. So come in and order a steak which we carved into a plane. Yes, that's right, for $80 get a
-                place that
-                is built by one giant ribeye along with 2 filet mignons, corn, mac&cheese, tomatoes, and a pickle. For
-                $5 more
+                experience. So come in and order a steak which we carved into a plane. Yes, that's right, for $80
+                get a place that
+                is built by one giant ribeye along with 2 filet mignons, corn, mac&cheese, tomatoes, and a pickle.
+                For $5 more
                 add on a generous amount of ranch to create snow on the plane. ($80.00)</dd>
             <hr>
             <dt>Seasoned Saturdays</dt>
-            <dd>Stop by on Seasoned Saturdays to try our special homemade dry rub wings seasoning. The seasoning is a
-                secret
-                recipe we keep in a glass bottle where no one will ever think to look. We are proud to be serving this
-                kind
-                of sauce to our supporters on Saturdays.</br> It's one of those sauces that you'd wanna order a seperate
-                gallon
-                of dry sauce just for your 6 pieces of wings. Along with the wings we serve the most seasoned fries you
+            <dd>Stop by on Seasoned Saturdays to try our special homemade dry rub wings seasoning. The seasoning is
+                a secret
+                recipe we keep in a glass bottle where no one will ever think to look. We are proud to be serving
+                this kind
+                of sauce to our supporters on Saturdays.</br> It's one of those sauces that you'd wanna order a
+                seperate gallon
+                of dry sauce just for your 6 pieces of wings. Along with the wings we serve the most seasoned fries
+                you
                 have ever eaten. </br>We are not done yet, adding onto the seasoned family, try our seasoned beer as
                 well.
                 ($20.95/per 12pc combo)
