updated css file

--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Starbulls</title>
-    <link rel="stylesheet" type="text/css" href="css\specials.css">
+    <link rel="stylesheet" type="text/css" href="css\menu.css">
 </head>
 
 <body>
