updated social media links

--- a/specialsOTW.html
+++ b/specialsOTW.html
@@ -101,11 +101,11 @@
     </div>
 
     <div id="socialMedia">
-        <a href="http://www.instagram.com/" class="btn btn-default" target="_blank">
+        <a href="https://www.instagram.com/starbulls716/" class="btn btn-default" target="_blank">
             <img src="images\instagram.png" alt="Instagram"></a>
-        <a href="http://www.facebook.com/" class="btn btn-default" target="_blank">
+        <a href="https://www.facebook.com/starbulls.buffalo/" class="btn btn-default" target="_blank">
             <img src="images\fb.png" alt="facebook"></a>
-        <a href="http://www.twitter.com/" class="btn btn-default" target="_blank">
+        <a href="https://twitter.com/home/" class="btn btn-default" target="_blank">
             <img src="images\_twitter.png" alt="twitter"></a>
     </div>
     <div id="end">
